--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Kameron Moshier</title>
+    <title>Hundy: A Coding Project By Kameron Moshier</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,13 +15,16 @@
 
         <link href="/css/site.css" rel="stylesheet">
         <link rel="icon" type="image/png" href="/img/favicon-32x32.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column h-100">
     <!-- NAV SECTION -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/img/favicon-32x32.png" class="d-inline-block align-text-top" width="30" height="24"> APP NAME</a>
+        <a class="navbar-brand logoFont" href="#"><img src="/img/favicon-32x32.png" class="d-inline-block align-text-top" width="30" height="24">Hundy</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -53,7 +56,7 @@
        <div class="container col-xxl-8 px-4 py-5">
            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">APP Name: A Coding Project</h1>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Hundy: A Coding Project</h1>
                     <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops. Write a program that display numbers from 0 to 100. Display the even numbers in <strong>BOLD.</strong></h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
