--- a/code.html
+++ b/code.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" target="_blank" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                    <a class="nav-link" target="_blank" href="https://github.com/AmFil/Hundy">Git Repo</a>
                 </li>
             </ul>
         </div>
