--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="/code.html">The Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="#">About</a>
+                    <a class="nav-link" target="_blank" href="https://www.linkedin.com/in/kameron-moshier-2a9a28164/">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https://github.com/AmFil/Hundy">Git Repo</a>
